--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <header class="header">
             <div class="profile-info">
                 <h1 class="section-title">Dohyun An</h1>
-                <p>I am an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>, majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>. Currently, I'm taking lectures on the basics of AI and deep learning.</p>
-                <p><b>My favorite topic is assistants and chatbots based on generative AI.</b> I'm also interested in deep learning models for various fields including computer vision and natural language processing. I'm moderately experienced in Python, especially in PyTorch.</p>
+                <div class="info-item">
+                  <p>I am an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>, majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>. Currently, I'm taking lectures on the basics of AI and deep learning.</p>
+                  <p><b>My favorite topic is assistants and chatbots based on generative AI.</b> I'm also interested in deep learning models for various fields including computer vision and natural language processing. I'm moderately experienced in Python, especially in PyTorch.</p>
+                </div>
                 <div class="contact-links">
                     <a href="mailto:raphael6931@yonsei.ac.kr">Email</a> /
                     <a href="data/AnDohyun-CV.pdf">CV</a> /
