--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h3>AI Research Internship</h3>
                     <p class="reduced-margin"><a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Medisys lab</a>, Yonsei University</p>
                     <p class="reduced-margin">Jul 2024 - Aug 2024</p>
-                    <p class="reduced-margin">Advisor: Prof. Jongduk Baek</p>
+                    <p class="reduced-margin">Advisor: <u>Prof. Jongduk Baek</u></p>
                     <p>Developed a model that assesses the perceptual quality of low-dose CT images without references, based on ResNet. The loss function was designed to fine-tune the model.</p>
                 </div>
             </div>
@@ -65,10 +65,19 @@
 
         <section class="awards">
             <h2 class="section-title">Awards</h2>
-            <ul>
-                <li class="award-item"><b>Highest Honors</b> - Aug 2024 (Yonsei University)<br>GPA: 4.25/4.3 (Top 1 in Dept. of AI)</li>
-                <li class="award-item"><b>Highest Honors</b> - Feb 2024 (Yonsei University)<br>GPA: 4.25/4.3 (Top 1 in College of Computing)</li>
-                <li class="award-item"><b>High Honors</b> - Aug 2023 (Yonsei University)<br>GPA: 4.25/4.3 (Top 4 in College of Computing)</li>
+            <ul class="award-root">
+                <li class="award-item"><b>Highest Honors</b> - Aug 2024 (Yonsei University)</li>
+                <ul class="award-sub">
+                  <li class="award-item">GPA: 4.25/4.3 (Top 1 in Dept. of AI)</li>
+                </ul>
+                <li class="award-item"><b>Highest Honors</b> - Feb 2024 (Yonsei University)</li>
+                <ul class="award-sub">
+                  <li class="award-item">GPA: 4.25/4.3 (Top 1 in College of Computing)</li>
+                </ul>
+                <li class="award-item"><b>High Honors</b> - Aug 2023 (Yonsei University)</li>
+                <ul class="award-sub">
+                  <li class="award-item">GPA: 4.25/4.3 (Top 4 in College of Computing)</li>
+                </ul>
             </ul>
         </section>
 
