--- a/index.html
+++ b/index.html
@@ -2,89 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dohyun An's academic website">
-    <meta name="keywords" content="Dohyun An, Yonsei University, AI, Artificial Intelligence">
     <meta name="author" content="Dohyun An">
-
     <title>Dohyun An</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <div class="profile-info">
-                <h1 class="section-title">Dohyun An</h1>
-                <div class="info-item">
-                  <p>I am an undergraduate student at <a href="https://yonsei.ac.kr">Yonsei University</a>, majoring in <a href="https://ai.yonsei.ac.kr/">artificial intelligence</a>. Currently, I'm taking lectures on the basics of AI and deep learning.</p>
-                  <p><b>My favorite research topic is assistants and chatbots based on generative AI.</b> I'm also interested in deep learning models for various fields including computer vision and natural language processing. I'm moderately experienced in Python, especially in PyTorch.</p>
-                </div>
-                <div class="contact-links">
-                    <a href="mailto:raphael6931@yonsei.ac.kr">Email</a> /
-                    <a href="data/AnDohyun-CV.pdf">CV</a> /
-                    <a href="https://github.com/raphael6931">Github</a>
-                </div>
-            </div>
-            <div class="profile-photo">
-                <img src="images/profile.jpg" alt="Dohyun An's profile image">
-            </div>
-        </header>
-
-        <section class="experience">
-            <h2 class="section-title">Experience</h2>
-            <div class="experience-item">
-                <img src="images/ycc.png" alt="YCC Logo">
-                <div>
-                    <h3>Yonsei Computer Club (YCC)</h3>
-                    <p class="reduced-margin">Sep 2024 - Present</p>
-                    <p>Computer club of Yonsei University that hosts various activities such as study meetings and software development projects.</p>
-                </div>
-            </div>
-            <div class="experience-item">
-                <img src="images/ldctiqac.png" alt="CT image example">
-                <div>
-                    <h3>AI Research Internship</h3>
-                    <p class="reduced-margin"><a href="https://sites.google.com/view/yonsei-medisyslab/home?authuser=0&pli=1">Medisys lab</a>, Yonsei University</p>
-                    <p class="reduced-margin">Jul 2024 - Aug 2024</p>
-                    <p class="reduced-margin">Advisor: <u>Prof. Jongduk Baek</u></p>
-                    <p>Developed a model that assesses the perceptual quality of low-dose CT images without references, based on ResNet. The loss function was designed to fine-tune the model.</p>
-                </div>
-            </div>
-            <div class="experience-item">
-                <img src="images/samsung.png" alt="Bootcamp Logo">
-                <div>
-                    <h3>Samsung Electronics DX Algorithm Bootcamp</h3>
-                    <p class="reduced-margin">Summer 2023</p>
-                    <p>Studied intermediate-advanced data structures and algorithms, such as dynamic programming and segment trees.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="awards">
-            <h2 class="section-title">Awards</h2>
-            <ul class="award-root">
-                <li class="award-item"><b>Highest Honors</b> - Aug 2024 (Yonsei University)</li>
-                <ul class="award-sub">
-                  <li class="award-item">GPA: 4.25/4.3 (Top 1 in Dept. of AI)</li>
-                </ul>
-                <li class="award-item"><b>Highest Honors</b> - Feb 2024 (Yonsei University)</li>
-                <ul class="award-sub">
-                  <li class="award-item">GPA: 4.25/4.3 (Top 1 in College of Computing)</li>
-                </ul>
-                <li class="award-item"><b>High Honors</b> - Aug 2023 (Yonsei University)</li>
-                <ul class="award-sub">
-                  <li class="award-item">GPA: 4.25/4.3 (Top 4 in College of Computing)</li>
-                </ul>
-            </ul>
-        </section>
-
-        <footer>
-            <p>Last update: Oct 2024<br>
-            Layout inspired by <a href="https://jonbarron.info/">Jon Barron's website</a></p>
-        </footer>
-    </div>
+    <h1>Coming soon...</h1>
 </body>
 </html>
